Fix flex box issues on Safari #3

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -283,6 +283,7 @@ textarea {
 .formBody .subForm {
   width: 100%;
   display: flex;
+  display: -webkit-box;
 }
 ::-webkit-input-placeholder {
   color: #fff;
