--- a/src/stylus/responsive/smartphones.styl
+++ b/src/stylus/responsive/smartphones.styl
@@ -38,7 +38,6 @@
 	
 	.controls
 		margin-top 20px
-		justify-content
 
 	.controls .btn
 		width 169px
@@ -50,6 +49,7 @@
 	.facaparte
 		height 567px
 		align-items flex-end
+		-webkit-box-align end
 		background-repeat no-repeat
 		background-attachment initial
 		background-size 586px 334px
@@ -68,6 +68,7 @@
 	
 	.facaparte article a
 		display flex
+		display -webkit-box
 
 	.facaparte article .btn
 		margin 25px auto
